feat: make isEqual more readable

--- a/website/docs/understanding-state-tracker/comparison.mdx
+++ b/website/docs/understanding-state-tracker/comparison.mdx
@@ -56,3 +56,7 @@ StateTrackerUtil.setValue(proxyState, {
 
 console.log('count ', count)  // 1
 ```
+
+## stateCompareLevel
+
+除了可以通过`shallowEqual`控制比较的深度，另一个参数是`stateCompareLevel`,
