--- a/website/docs/introduction/getting-started.mdx
+++ b/website/docs/introduction/getting-started.mdx
@@ -7,16 +7,192 @@ __A fast, intuitive, access path based reactive react state management__
 
 ## Usage
 
+### Tracking accessed key
+
 ```ts
 import { produce, Reaction } from 'state-tracker'
 
 const state = {
   app: {
     list: [{ id: 1, label: 'first' }],
-    location: { city: 'shanghai' },
+    location: {
+      city: 'shanghai',
+    },
     title: 'current',
     description: 'testing',
   },
+  bar: {
+    count: 2,
+  }
 };
 const proxyState = produce(state);
+
+const reaction = new Reaction({
+  fn: (state) => {
+    console.log('state ', state.app.list[0].id) // state  1
+    console.log('location ', state.app.location.city) // location  shanghai
+    console.log('count ', state.bar.count) // count  2
+  },
+  proxyState,
+})
+
+console.log('reaction ', reaction.getAffectedPaths())
+
+// {
+//   app: [
+//     ['app'], ['app', 'list'], ['app', 'list', '0'],
+//     ['app', 'list', '0', 'id'], ['app', 'location'],
+//     ['app', 'location', 'city']
+//   ],
+//   bar: [['bar'], ['bar', 'count']]
+// }
 ```
+
+### Perform auto-run function
+
+```ts
+import { produce, Reaction, StateTrackerUtil } from 'state-tracker'
+
+export default () => {
+  const state = { app: { a1: 1, a2: 2 } };
+  const proxyState = produce(state);
+  let count = 0
+
+  new Reaction({
+    fn: (state, props) => {
+      console.log('a1 ', state.app.a1)
+      count++;
+    },
+    state: proxyState,
+  });
+
+  console.log('count1 ', count)   // 1
+
+  // trigger fn rerun
+  StateTrackerUtil.setValue(
+    proxyState, {
+      app: { a1: 2, a2: 2 }
+    }
+  )
+
+  console.log('count2 ', count) // 2
+
+  return null
+}
+```
+
+### Comparing object in fine-grained way
+
+#### shallowEqual
+
+```ts
+import { produce, Reaction, StateTrackerUtil } from 'state-tracker'
+
+export default () => {
+  const state = { a: { a1: 1, a2: 2, } }
+  const proxyState = produce(state)
+
+  let a1 = 0
+  let count = 0
+
+  const reaction = new Reaction({
+    fn: (state) => {
+      a1 = state.a.a1
+      count++
+    },
+    state: proxyState
+  })
+
+  StateTrackerUtil.setValue(proxyState, {
+    a: { a1: 1, a2: 2, }
+  });
+
+  const equal = StateTrackerUtil.isEqual(
+    {a: { a1: 1, a2: 3, }},
+    reaction
+  )
+
+  console.log('equal ', equal.isEqual)   // false
+  console.log('count ', count)           // 2
+  return null
+}
+```
+
+#### deepEqual
+
+```ts
+import { produce, Reaction, StateTrackerUtil } from 'state-tracker'
+
+export default () => {
+  const state = { a: { a1: 1, a2: 2, } }
+  const proxyState = produce(state)
+
+  let a1 = 0
+  let count = 0
+
+  const reaction = new Reaction({
+    fn: (state) => {
+      a1 = state.a.a1
+      count++
+    },
+    shallowEqual: false,
+    state: proxyState
+  })
+
+  StateTrackerUtil.setValue(proxyState, {
+    a: { a1: 1, a2: 2, }
+  });
+
+  const equal = StateTrackerUtil.isEqual(
+    {a: { a1: 1, a2: 3, }},
+    reaction
+  )
+
+  console.log('equal ', equal.isEqual)   // true
+  console.log('count ', count)           // 1
+  return null
+}
+```
+
+### Caching accessed value
+
+```ts
+import { produce, Reaction } from 'state-tracker'
+
+export default () => {
+  const state = {
+    app: {
+      list: [{ id: 1, label: 'first' }],
+      location: {
+        city: 'shanghai',
+      },
+      title: 'current',
+      description: 'testing',
+    },
+    bar: {
+      count: 2,
+    }
+  }
+  const cache = new Map()
+  const proxyState = produce(state, cache)
+
+  let a1 = 0
+  let count = 0
+
+  const reaction = new Reaction({
+    fn: (state) => {
+      console.log('state ', state.app.list[0].id)
+      console.log('location ', state.app.location.city)
+      console.log('count ', state.bar.count)
+    },
+    shallowEqual: false,
+    state: proxyState
+  })
+
+  console.log('count ', cache)
+  return null
+}
+```
+
+<img src={require('./assets/cache_01.png').default} style={{ width: '900px' }} />
+<img src={require('./assets/cache_02.png').default} style={{ width: '900px' }} />
